--- a/css/styles.css
+++ b/css/styles.css
@@ -279,6 +279,7 @@ letter-spacing: 0.03em;
     font-size: 16px;
     line-height: 1.6;
     letter-spacing: 0.03em;
+    cursor: pointer;
 }
 
 .examples-button:hover,.examples-button:focus{
